# talent-scouting-intelligence

./: .gitignore  Makefile  README.md  dashboard.py  pyproject.toml  requirements.txt
app/: __init__.py  ui.py
configs/: default.json  default.yaml
data/mock/: manual_seeds.json  manual_snapshot_template.csv
data/sources/: source_registry.json
data/user/: affinity_artists.csv  affinity_artists_updated.csv  ai_ar_tools_landscape.docx  bootstrap_datasets.csv  datasets_data_dictionary.csv  historical_breakouts_updated.csv  historical_breakouts_v2.csv  signals_feature_schema.csv  starter_sources_additions.csv
docs/: runbook.md  system_design.md  technical_design_v2.md  ui_ux_map.md
scripts/: run_real_scan.sh
src/talent_scouting_intel/: __init__.py  __main__.py  cli.py
src/talent_scouting_intel/adapters/: autonomous_collector.py  bootstrap_backfill.py  lastfm_adapter.py  manual_import.py  mock_adapter.py  musicbrainz_adapter.py  reddit_adapter.py  rss_adapter.py  shortform_proxy_adapter.py  spotify_adapter.py  wikipedia_adapter.py
src/talent_scouting_intel/models/: types.py
src/talent_scouting_intel/pipeline/: alerts.py  autopilot.py  backtest.py  candidates.py  common.py  entity_resolution.py  features.py  ingest.py  priors.py  report.py  scoring.py  signal_features.py  source_registry.py  (+2 more)
tests/: test_alerts.py  test_backtest_calibration.py  test_candidate_filters.py  test_ingest_history.py  test_priors.py  test_shortform_proxy.py  test_signals.py  test_spotify_tracking.py  test_tastemakers.py  test_tracking_pool.py  test_trust.py  test_ui_state.py
(+8 files in other folders)
